# Auto-apply

./: .gitignore  MCP_UPDATE_TOOLS.md  README.md  database.py  env.example  frontend.py  main.py  mcp_server.py  pyproject.toml  resume_parser.py  test_parser.py  test_parser_with_pdf.py
.cursor/: mcp.json
